--- a/app/src/main/res/layout/game_over.xml
+++ b/app/src/main/res/layout/game_over.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:padding="10dp">
+    android:padding="20dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,8 +12,9 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/reset"
-            android:onClick="reset"/>
+            android:background="@drawable/left_arrow"
+            android:onClick="exit"
+            />
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
@@ -21,8 +22,9 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/undo"
-            android:onClick="exit"/>
+            android:background="@drawable/reset"
+            android:onClick="reset"
+            />
     </LinearLayout>
 
     <LinearLayout
@@ -30,12 +32,6 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/ivNewHeighest"
-            android:visibility="gone"
-            android:background="@drawable/you_win"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -44,8 +40,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Your score: "
-                android:textSize="24sp"/>
+                android:text="Your points: "
+                android:textColor="@android:color/holo_blue_dark"
+                android:textSize="24dp"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -53,11 +50,28 @@
                 android:id="@+id/tvPoints"
                 android:text="50"
                 android:textSize="50dp"
-                android:textColor="@android:color/holo_blue_dark"/>
+                android:textColor="@android:color/holo_blue_bright"/>
         </LinearLayout>
-        <View
-            android:layout_width="1dp"
-            android:layout_height="80dp"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Your highest: "
+                android:textColor="@android:color/holo_blue_dark"
+                android:textSize="24dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tvHighest"
+                android:text="50"
+                android:textSize="50dp"
+                android:textColor="@android:color/holo_blue_bright"/>
+        </LinearLayout>
+
         
     </LinearLayout>
     
