--- a/app/src/main/res/layout/game_over.xml
+++ b/app/src/main/res/layout/game_over.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your points: "
-                android:textColor="@android:color/holo_blue_dark"
+                android:textColor="@android:color/darker_gray"
                 android:textSize="24dp"/>
 
             <TextView
@@ -60,7 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your highest: "
-                android:textColor="@android:color/holo_blue_dark"
+                android:textColor="@android:color/darker_gray"
                 android:textSize="24dp"/>
 
             <TextView
