--- a/app/src/main/res/layout/game_over.xml
+++ b/app/src/main/res/layout/game_over.xml
@@ -1,30 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:orientation="vertical"
     android:padding="20dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/left_arrow"
-            android:onClick="exit"
-            />
+            android:onClick="exit" />
+
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:layout_weight="1" />
+
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/reset"
-            android:onClick="reset"
-            />
+            android:onClick="reset" />
     </LinearLayout>
 
     <LinearLayout
@@ -37,43 +39,46 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your points: "
                 android:textColor="@android:color/darker_gray"
-                android:textSize="24dp"/>
+                android:textSize="24dp" />
 
             <TextView
+                android:id="@+id/tvPoints"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvPoints"
-                android:text="50"
-                android:textSize="50dp"
-                android:textColor="@android:color/holo_blue_bright"/>
+                android:text="0"
+                android:textColor="@android:color/holo_blue_bright"
+                android:textSize="50dp" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Your highest: "
                 android:textColor="@android:color/darker_gray"
-                android:textSize="24dp"/>
+                android:textSize="24dp" />
 
             <TextView
+                android:id="@+id/tvHighest"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvHighest"
                 android:text="0"
-                android:textSize="50dp"
-                android:textColor="@android:color/holo_blue_bright"/>
+                android:textColor="@android:color/holo_blue_bright"
+                android:textSize="50dp" />
         </LinearLayout>
 
-        
+
     </LinearLayout>
-    
-    
+
+
 </LinearLayout>
